# oz_django_study

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
articles/: services.py  views.py
articles/migrations/: 0001_initial.py
config/: settings.py
